--- a/src/components/Stopwatch/index.css
+++ b/src/components/Stopwatch/index.css
@@ -43,3 +43,18 @@ button {
   border-radius: 5px;
   border: 0;
 }
+
+.button-red {
+  background-color: #ef0d36;
+  color: #ffffff;
+}
+
+.button-green {
+  background-color: #1db05f;
+  color: #ffffff;
+}
+
+.button-yellow {
+  background-color: #eaa800;
+  color: #ffffff;
+}
